# bayesian-mixture-model-pos-tagger

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg
notebooks/: plot.ipynb  preprocess.ipynb  run.ipynb  train.ipynb
notebooks/library_development/: development.ipynb  plot.ipynb
src/lqrz/: __init__.py
src/lqrz/bayesian_mixture_model_pos_tagger/: __init__.py
src/lqrz/bayesian_mixture_model_pos_tagger/get_data/: preprocessor.py
src/lqrz/bayesian_mixture_model_pos_tagger/plot/: plot.py
src/lqrz/bayesian_mixture_model_pos_tagger/train/: gibbs_sampler.py  trainer.py  trainer_config.py
