[aliases]
test=pytest

[metadata]
name = bayesian-mixture-model-pos-tagger
version = 1.0.0
author = Lautaro Quiroz
license = COPYRIGHT
description = Bayesian mixture model pos tagger for Mapudungun corpus.
long_description = file: README.md


[options]
package_dir =
     = src
install_requires = file: requirements.txt
include_package_data = True
namespace_packages = lqrz

[options.packages.find]
where = src

[options.extras_require]
dev =
     pytest==8.4
     black==25.9
     flake8==7.3
     tox==4.31
     jupyterlab==4.4
